# bevy_pretty_text

./: Cargo.toml
assets/shaders/: shake.wgsl
bevy_pretty_macro/: Cargo.toml
bevy_pretty_macro/src/: lib.rs
examples/: simple.rs
macros/: Cargo.toml
src/: app.rs  bin.rs  effect.rs  lib.rs  materials.rs  type_writer.rs
src/materials/: mod.rs  shake.rs  wave.rs
src/render/: material.rs  mesh.rs
src/shaders/: default_text.wgsl  shake.wgsl  text.wgsl  text_functions.wgsl  text_types.wgsl  wave.wgsl
src/type_writer/: clear.rs  input.rs  mod.rs  scroll.rs  section.rs  sound.rs
text/: Cargo.toml
text/src/: lib.rs  material.rs  parse.rs
