[package]
name = "text"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_color",
    "bevy_text",
    "bevy_window",
] }
quote = { version = "1.0.37", default-features = false, optional = true }
syn = { version = "2.0.90", optional = true }
proc-macro2 = { version = "1.0.92", default-features = false, optional = true }
winnow = "0.7"

[features]
proc-macro = ["dep:quote", "dep:proc-macro2", "dep:syn"]
